# fxgraph

./: .gitignore  FXGraphOverviewDocs.md  FXGraphREADME.md  FXGraphTechDocs.md  README.md  READMEv2.2.md  READMEv2.md  READMEv3.md  STATUS.md  alpha_gnotes  alpha_gnotesdoc.md  gnotes  gptnotesa  manual_arrowrs_examples.rs  vb.txt
backend/: Cargo.toml  build.rs
backend/src/: main.rs
frontend/: buf.gen.yaml  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DashboardTable.tsx  MapDashboard.tsx  RegionTable.tsx  Tabs.tsx  USMap.tsx  VolumeTable.tsx  columns.ts
frontend/lib/: client.ts
proto/: dashboard.proto
scripts/: clean.sh  dev.sh
