[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
tonic-web = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
http = "1.0"
rand = "0.8"  # Used for generating mock data

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"
